<resources>
    /* ------------------------------------------------ INFO APP ------------------------------------------------ */

    <string name="app_name">BibliTorrent</string>

    /* ------------------------------------------------ TITLES ACTIVITYS ------------------------------------------------ */

    <string name="title_activity_main">BibliTorrent</string>
    <string name="title_activity_tabs_admin">Admin</string>
    <string name="title_activity_tabs_client">Client</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_add_library">Add Library</string>
    <string name="title_activity_detail_library">Detail Library</string>
    <string name="title_activity_detail_book">Detail Book</string>
    <string name="title_activity_list_books">List Books</string>
    <string name="title_activity_control_library">Control Library</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="title_activity_control_book">Control Book</string>
    <string name="title_activity_add_profile">Add Profile</string>
    <string name="title_activity_control_profile">Control Profile</string>

    /* ------------------------------------------------ TITLES BUTTOM (TABS CLIENT) ------------------------------------------------ */

    <string name="title_search">Search</string>
    <string name="title_reserves">Reserves</string>
    <string name="title_libraries">Libraries</string>

    /* ------------------------------------------------ TITLES BUTTOM (TABS ADMIN) ------------------------------------------------ */

    <string name="title_control_books">Books</string>
    <string name="title_control_libraries">Libraries</string>
    <string name="title_control_profiles">Profiles</string>

    /* ------------------------------------------------ MENU (EXIT/LOGOUT) ------------------------------------------------ */

    <string name="title_exit">Exit</string>
    <string name="title_QRScanner">QRScanner</string>

    /* ------------------------------------------------ ALERT DIALOG (EXIT)
    ------------------------------------------------ */

    <string name="title_alert_dialog_exit">Exit</string>
    <string name="message_alert_dialog_exit">Are you sure you want to exit the application?</string>
    <string name="positive_button_alert_dialog_exit">Yes</string>
    <string name="negative_button_alert_dialog_exit">No</string>

    /* ------------------------------------------------ ALERT DIALOG (LOGOUT) ------------------------------------------------ */

    <string name="title_alert_dialog_logout">Log Out</string>
    <string name="message_alert_dialog_logout">Are you sure you want to log out?</string>
    <string name="positive_button_alert_dialog_logout">Yes</string>
    <string name="negative_button_alert_dialog_logout">No</string>

    /* ------------------------------------------------ LOGIN / REGISTER ------------------------------------------------ */

    <string name="prompt_user">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_forgot_password">Forgot password?</string>
    <string name="toast_verify_account">Before you must verify your account</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="action_terms">Accept terms and conditions</string>
    <string name="action_admin">Admin</string>
    <string name="action_log_in_google">Log in with google</string>
    <string name="action_log_in_facebook">Log in with facebook</string>
    <string name="title_progress_dialog_register">Registering</string>
    <string name="message_progress_dialog_register">Wait please...</string>
    <string name="error_field_login">This field is required</string>
    <string name="toast_register_users">User successfully registered</string>
    <string name="toast_login_users">User successfully logged in</string>
    <string name="toast_logout_users">User successfully logged out</string>
    <string name="toast_fogot_password_users">Check your email to be able to reset the password</string>
    <string name="toast_sign_out">User logged out successfully</string>

    /* ------------------------------------------------ MATERIAL DRAWER ------------------------------------------------ */

    <string name="section_library">Library</string>
    <string name="section_administration">Managament</string>
    <string name="section_profile">Profile</string>
    <string name="section_reserves">Reserves</string>
    <string name="section_libraries">Libraries</string>
    <string name="section_settings">Settings</string>
    <string name="section_logout">Log out</string>
    <string name="title_progress_dialog_tabs">Updating data</string>
    <string name="message_progress_dialog_tabs">Wait please...</string>

    /* ------------------------------------------------ TITLES CONTROL/ADD LIBRARIES ------------------------------------------------ */

    <string name="title_libraries_name">Name</string>
    <string name="title_libraries_tel">Tef.</string>
    <string name="title_libraries_direction">Direction</string>
    <string name="title_libraries_location">Location</string>
    <string name="title_libraries_schedule">Schedule</string>
    <string name="title_libraries_latitude">Latitude</string>
    <string name="title_libraries_longitude">Longitude</string>
    <string name="title_libraries_add">Add</string>
    <string name="title_libraries_edit">Edit</string>
    <string name="title_libraries_remove">Remove</string>
    <string name="title_view_books">Books</string>
    <string name="error_libraries">This field is required</string>
    <string name="toast_add_libraries">Library added successfully</string>
    <string name="toast_edit_libraries">Correctly edited library</string>
    <string name="toast_remove_libraries">Library removed successfully</string>
    <string name="toast_error_fields_libraries">There are fields that are required</string>
    <string name="toast_error_field_libraries">This field is required</string>
    <string name="title_alert_dialog_edit_libraries">Edit Library</string>
    <string name="message_alert_dialog_edit_libraries">Are you sure you want to save the changes?</string>
    <string name="title_alert_dialog_remove_libraries">Remove Library</string>
    <string name="message_alert_dialog_remove_libraries">Are you sure you want to delete the library?</string>

    /* ------------------------------------------------ TITLES SEARCH BAR ------------------------------------------------ */

    <string name="title_search_bar_book">ISBN, title, author, gender, editorial</string>
    <string name="title_search_bar_libraries">Name, location, direction, tel</string>
    <string name="title_search_bar_profile">Email, name</string>

    /* ------------------------------------------------ TITLES CONTROL/ADD BOOKS ------------------------------------------------ */

    <string name="title_books_isbn">ISBN</string>
    <string name="title_books_title">Title</string>
    <string name="title_books_author">Author</string>
    <string name="title_books_gender">Gender</string>
    <string name="title_books_editorial">Editorial</string>
    <string name="title_books_idiom">Idiom</string>
    <string name="title_books_description">Description</string>
    <string name="title_books_pages">Nº pages</string>
    <string name="title_books_libraries">Libraries</string>
    <string name="title_books_add">Add</string>
    <string name="title_books_edit">Edit</string>
    <string name="title_books_remove">Remove</string>
    <string name="toast_add_books">Book added successfully</string>
    <string name="toast_edit_books">Correctly edited book</string>
    <string name="toast_remove_books">Book removed successfully</string>
    <string name="toast_error_photo">Before adding a book you must select a photo</string>
    <string name="toast_error_field_books">This field is required</string>
    <string name="toast_error_fields_books">There are fields that are required</string>
    <string name="title_alert_dialog_edit_books">Edit Book</string>
    <string name="message_alert_dialog_edit_books">Are you sure you want to save the changes?</string>
    <string name="title_alert_dialog_remove_books">Remove Book</string>
    <string name="message_alert_dialog_remove_books">Are you sure you want to delete the book?</string>

    /* ------------------------------------------------ TITLES MAPS LIBRARIES ------------------------------------------------ */

    <string name="snippet_maps_libraries">More info.</string>

    /* ------------------------------------------------ TITLES SETTINGS ------------------------------------------------ */

    <string name="title_change_photo">Change photo</string>
    <string name="title_change_name">Change name</string>
    <string name="title_change_email">Change email</string>
    <string name="title_change_password">Change password</string>
    <string name="title_delete_user">Delete user</string>
    <string name="title_alert_dialog_delete_user">Do you want to delete your account?</string>
    <string name="message_alert_dialog_delete_user">Complete the following form to delete your account.</string>
    <string name="title_alert_dialog_change_password">Do you want to change your password?</string>
    <string name="message_alert_dialog_change_password">Complete the following form to change your password.</string>
    <string name="hint_alert_dialog_current_password">Current password</string>
    <string name="hint_alert_dialog_new_password">New password</string>
    <string name="title_alert_dialog_change_username">Do you want to change your username?</string>
    <string name="message_alert_dialog_change_username">Complete the following form to change your username.</string>
    <string name="hint_alert_dialog_new_username">New username</string>
    <string name="toast_change_username">Username changed successfully</string>
    <string name="toast_add_reserves">Book added to your reservations</string>
    <string name="toast_delete_user">User delete successfully</string>
    <string name="title_alert_dialog_change_email">Do you want to change your email?</string>
    <string name="message_alert_dialog_change_email">Complete the following form to change your email.</string>
    <string name="toast_change_email">Email changed successfully</string>
    <string name="toast_change_image">Image changed successfully</string>
    <string name="hint_alert_dialog_new_email">New email</string>
    <string name="toast_change_password">Password changed successfully</string>
    <string name="hint_alert_dialog_forgot_password">Email</string>
    <string name="title_alert_dialog_forgot_password">Forgot your password</string>
    <string name="message_alert_dialog_forgot_password">Complete the following form to change your password.</string>
    <string name="error_field_settings">This field is required</string>

    /* ------------------------------------------------ OTHERS ------------------------------------------------ */

    <string name="text_loged_reserves">Before you must log in</string>
    <string name="text_reserves_none">There is no reserved book</string>
    <string name="title_button_info">More info</string>

</resources>