<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/ButtonChangePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="ChangePhoto"
        android:text="@string/title_change_photo" />

    <Button
        android:id="@+id/ButtonChangeUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="ChangeUsername"
        android:text="@string/title_change_name" />

    <Button
        android:id="@+id/ButtonChangeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="ChangeEmail"
        android:text="@string/title_change_email" />

    <Button
        android:id="@+id/ButtonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="ChangePassword"
        android:text="@string/title_change_password" />

    <Button
        android:id="@+id/ButtonDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="#FF4444"
        android:onClick="deleteUser"
        android:text="@string/title_delete_user" />

</LinearLayout>